outputs/csi300-test/2025-07-27_19-20-21/evaluations/problem_eval3906495326304704227_stdout.txt
Traceback (most recent call last):
  File "/home/rjj/reevo/problems/csi300/eval.py", line 9, in <module>
    import gpt
  File "/home/rjj/reevo/problems/csi300/gpt.py", line 1
    importance in predicting future stock returns.}
                                                  ^
SyntaxError: unmatched '}'
